fix info layout bug

--- a/src/components/Player/PlayerUI/Info/Info.scss
+++ b/src/components/Player/PlayerUI/Info/Info.scss
@@ -15,6 +15,7 @@
 
 
     &.link {
+      width: 234px;
       .info__link__arrow {
         color: var(--green-color);
         //font-size: 15px;
